Closed
Bug 669385
Opened 14 years ago
Closed 14 years ago
Wrong date format in print preview (and on paper) of today's messages
Categories
(MailNews Core :: Printing, defect)
MailNews Core
Printing
Tracking
(thunderbird6 fixed, thunderbird7 fixed)
RESOLVED
FIXED
Thunderbird 8.0
People
(Reporter: gialloporpora, Assigned: squib)
References
()
Details
(Keywords: regression, Whiteboard: [gs])
Attachments
(1 file)
|
3.03 KB,
patch
|
standard8
:
review+
standard8
:
approval-comm-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 5.1; rv:5.0) Gecko/20100101 Firefox/5.0
Build ID: 20110615151330
Steps to reproduce:
Try to print a mail that has the today's date
Actual results:
In print preview (and on paper) only time is showed/printed, no date appears.
Expected results:
As in TB 3.1 also date must be printed.
| Reporter | ||
Comment 2•14 years ago
|
||
No :-) http://imgby.com/pptb5.png
I don't print many mail, this issue as been reported on the italian forum by an user
I think this is important for companies that needs to maintain an archive on paper.
| Reporter | ||
Comment 3•14 years ago
|
||
As workaround, the printingtools extension solve this issue:
http://nic-nac-project.de/~kaosmos/index-en.html
since version 0.2.18.
Updated•14 years ago
|
Whiteboard: [gs]
Updated•14 years ago
|
Comment 4•14 years ago
|
||
Many user report this on Gsfn too, it seems to be a regression of Thunderbird 5.
| Assignee | ||
Comment 5•14 years ago
|
||
Confirming. I'm pretty sure this is a regression from bug 294356. I will ruminate on this and perhaps upload a patch in a bit...
| Assignee | ||
Comment 6•14 years ago
|
||
Here's a fix. It's pretty straightforward. Maybe tests would be nice, but I have no idea how to go about doing that, and it seems like it'd be a lot of work to test this anyway...
Assignee: nobody → squibblyflabbetydoo
Status: NEW → ASSIGNED
Attachment #545588 -
Flags: review?(mbanner)
Comment 9•14 years ago
|
||
When will be this patch implemented into TB releases? It's really important bug especially for business emails - people have reported it on forum.Mozilla.cz severeal times, too, and I am also interested.
Updated•14 years ago
|
OS: Other → All
Comment 10•14 years ago
|
||
I also see this issue on TB 6. But this patch than fixed the problem (in my very quick test on OS X).
Component: General → Printing
Product: Thunderbird → MailNews Core
QA Contact: general → printing
Version: 5.0 → Trunk
Updated•14 years ago
|
Attachment #545588 -
Flags: review?(mbanner)
Attachment #545588 -
Flags: review+
Attachment #545588 -
Flags: approval-comm-beta+
Attachment #545588 -
Flags: approval-comm-aurora+
Comment 12•14 years ago
|
||
Checked into trunk: http://hg.mozilla.org/comm-central/rev/65095963557a
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 8.0
Comment 13•14 years ago
|
||
Checked into aurora and beta:
http://hg.mozilla.org/releases/comm-aurora/rev/3f39b51fff16
http://hg.mozilla.org/releases/comm-beta/rev/adc74b509b14
status-thunderbird6:
--- → fixed
status-thunderbird7:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•