Bug 669385 - Wrong date format in print preview (and on paper) of today's messages; r=Standard8